cluster-components/istio-config/templates/ingress-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-ingress
  annotations:
    keepalived-operator.redhat-cop.io/keepalivedgroup: keepalived-operator/keepalivedgroup-router
    external-dns.alpha.kubernetes.io/target: "192.168.2.123"
    external-dns.alpha.kubernetes.io/hostname: "*.cloud.ticq.org"
spec:
  gatewayClassName: istio

  addresses:
  - value: 192.168.2.123
    type: IPAddress

  listeners:
  - name: default
    port: 80
    protocol: HTTP

    hostname: "*.cloud.ticq.org"

    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gitops.ticq.dev/ingress-type: istio

  - name: https
    port: 443
    protocol: HTTPS

    hostname: "*.cloud.ticq.org"

    tls:
      mode: Terminate # If protocol is `TLS`, `Passthrough` is a possible mode
      certificateRefs:
      - kind: Secret
        group: ""
        name: cloud-ticq-org

    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gitops.ticq.dev/ingress-type: istio
